# SlicerMRUSLandmarking

./: .gitignore  CMakeLists.txt  License.txt  README.md  basic_ui.py  main.py  mainwindow.ui  opacity.py  temp.py  ui_mainwindow.py  utils.py  widget_definitions.py  widgets.py
LandmarkingView/: CMakeLists.txt  LandmarkingView.py
LandmarkingView/Resources/UI/: LandmarkingView.ui
MRUSLandmarking/: CMakeLists.txt  MRUSLandmarking.py
MRUSLandmarking/MRUSLandmarkingLib/: utils_landmarks.py  utils_views.py
MRUSLandmarking/Resources/: shortcuts.py  utils.py  utils_landmarks.py  utils_views.py
MRUSLandmarking/Resources/Logic/: landmarks_from_s.py
MRUSLandmarking/Resources/UI/: MRUSLandmarking.ui
SlicerMRUSLandmarking/: SlicerMRUSLandmarking.py  SlicerMRUSLandmarking.py~
SlicerMRUSLandmarking/Resources/Code/3DSIFT-master/3DSIFT/: 3DSIFT.vcxproj  Example.cpp
SlicerMRUSLandmarking/Resources/UI/: SlicerMRUSLandmarking.ui
data/: all_day.csv
misc/: GUIpreview.psd  ag2146_T2SPACE_US1predura  icon.psd  new custom view.indd  startup_file.py  tmp.py
opacity_ui/: main.py  opacity_ui.py  opacity_ui.ui  opacity_window_logic.py
qt_basics/: hello_world.py  ui_mainwindow.py  widgets.py
qt_data_visualisation/: main.py  qt_logic.py  utils.py
sift/: featExtract.mac  featExtract.ubu  featMatchMultiple.ubu
